# cuckoo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  blank_model.json  cat_dog_model.json  eslintrc  index.html  ooa_0.json  ooa_0_model.json  package-lock.json  package.json  sarzak_ooa.json  sarzak_ooa_model.json  sarzak_schema.json  style.css  test.json  tsconfig.json
config/: webpack.config.js
public/: index.html  manifest.json
src/: App.tsx  app.rs  index.tsx  sarzak_ooa_model.json  widget.rs  widgets.rs
src/app/: hooks.ts  store.ts  utils.ts
src/features/attribute/: Attribute.module.css  Attribute.tsx  attributeSlice.ts
src/features/object/: Object.module.css  Object.tsx  ObjectDialog.tsx  objectSlice.ts  objectUISlice.ts
src/features/paper/: Paper.module.css  Paper.tsx  paperSlice.ts
src/features/relationship/: Associative.tsx  AssociativeDialog.tsx  Binary.tsx  BinaryDialog.tsx  Isa.tsx  IsaDialog.tsx  Relationship.module.css  Relationship.tsx  RelationshipDialog.tsx  relationshipSlice.ts
src/widget/: app.rs  object.rs  paper.rs
src/widgets/: app.rs  paper.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
