[package]
name = "cuckoo-ui"
version = "0.1.0"
authors = ["Keith T. Star <uberfoo@me.com>"]
edition = "2021"

[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
yew = "0.19"

[dependencies.web-sys]
version = "0.3.59"
features = [
    "HtmlButtonElement", "MouseEvent", "Event", "EventTarget", "SvgElement", "Element", "Node",
    "DomTokenList"
    ]
